vpi/table_mod_parse.output
Grammar

    0 $accept: table $end

    1 table: point
    2      | table point

    3 point: columns END_LINE

    4 columns: REAL
    5        | columns REAL


Terminals, with rules where they appear

$end (0) 0
error (256)
END_LINE (258) 3
REAL (259) 4 5


Nonterminals, with rules where they appear

$accept (5)
    on left: 0
table (6)
    on left: 1 2, on right: 0 2
point (7)
    on left: 3, on right: 1 2
columns (8)
    on left: 4 5, on right: 3 5


State 0

    0 $accept: . table $end

    REAL  shift, and go to state 1

    table    go to state 2
    point    go to state 3
    columns  go to state 4


State 1

    4 columns: REAL .

    $default  reduce using rule 4 (columns)


State 2

    0 $accept: table . $end
    2 table: table . point

    $end  shift, and go to state 5
    REAL  shift, and go to state 1

    point    go to state 6
    columns  go to state 4


State 3

    1 table: point .

    $default  reduce using rule 1 (table)


State 4

    3 point: columns . END_LINE
    5 columns: columns . REAL

    END_LINE  shift, and go to state 7
    REAL      shift, and go to state 8


State 5

    0 $accept: table $end .

    $default  accept


State 6

    2 table: table point .

    $default  reduce using rule 2 (table)


State 7

    3 point: columns END_LINE .

    $default  reduce using rule 3 (point)


State 8

    5 columns: columns REAL .

    $default  reduce using rule 5 (columns)
